<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.login.LoginActivity">

    <TextView
            android:id="@+id/txt_appName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    <TextView
            android:id="@+id/txt_hello"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appName"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_hello"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameEditText"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="20dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="20dp"/>

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorText"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="11dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>