<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_sound"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_album_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
    />

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layout_text"
            android:layout_width="0dp"
            android:layout_height="62dp"
            app:layout_constraintStart_toEndOf="@id/img_sound"
            app:layout_constraintEnd_toStartOf="@id/btnUpload"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/img_sound"
            app:layout_constraintBottom_toBottomOf="@id/img_sound">

        <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title"
                android:gravity="center|start"
        />

        <TextView
                android:id="@+id/lengthTextView"
                android:text="@string/length"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:textSize="12sp"
                android:gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_btn_start"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp">
        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/itemSoundPlayBtn"
                android:src="@drawable/ic_play_ic"
                android:background="@color/transparent"
                android:visibility="visible"
                android:contentDescription="@string/play_single_sound"/>

        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/itemSoundStopBtn"
                android:src="@drawable/ic_stop_with_bg"
                android:background="@color/transparent"
                android:visibility="gone"
                android:contentDescription="@string/stop_single_sound"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btnUpload"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_upload_ic"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_btn_start"
            android:layout_marginEnd="16dp"
    />


</android.support.constraint.ConstraintLayout>