<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.record.RecordFragment">

    <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="100sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.352"/>

    <ImageButton
            android:id="@+id/btnStartRecording"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/record_button"
            android:contentDescription="@string/record"
            android:elevation="2dp"
            android:src="@drawable/ic_mic_white_64dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.656"
            tools:targetApi="lollipop"/>

    <ImageButton
            android:id="@+id/btnStopRecording"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/record_button"
            android:contentDescription="@string/stop_recording"
            android:elevation="2dp"
            android:src="@drawable/ic_stop_white_64dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.656"
            tools:ignore="UnusedAttribute"/>

    <ImageButton
            android:id="@+id/btnPlay"
            android:src="@drawable/ic_play_arrow_white_48dp"
            android:contentDescription="@string/play"
            android:elevation="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872" android:background="@color/colorPrimary"
            tools:targetApi="lollipop"/>
    <TextView
            android:text="@string/recording_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recordingTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.226"
            android:textColor="@android:color/holo_red_dark"/>


</android.support.constraint.ConstraintLayout>