<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="4dp"
                                    android:layout_marginLeft="4dp"
                                    android:layout_marginRight="4dp"
                                    android:layout_marginTop="4dp"
                                    app:cardCornerRadius="8dp"
                                    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/albumImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:background="@android:color/black"
                android:src="@drawable/bg_cardview"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent_black"
                app:srcCompat="@drawable/ic_clear_24dp"
                android:id="@+id/btnDelete"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" android:contentDescription="@string/delete_soundscape"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/transparent_black"
                app:layout_constraintBottom_toBottomOf="@id/albumImgView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:background="@color/transparent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btnUpload"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_upload_ic"
                    android:id="@+id/btnUpload" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:background="@color/transparent"
                    android:tint="@android:color/white" android:contentDescription="@string/upload_soundscape"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>