<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="182dp" android:minWidth="100px"
                                             tools:layout_editor_absoluteY="81dp">

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/recordName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/record_name" android:maxLength="25"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/categorySpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/recordName"
            app:layout_constraintBottom_toTopOf="@+id/dialogLine"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progressBar" tools:visibility="gone" android:layout_marginStart="2dp"
            android:visibility="gone"/>


    <View
            android:id="@+id/dialogLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/layoutBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

    />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutBtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSave"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:text="@string/save"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>